avoid reduce a line

--- a/branch2.html
+++ b/branch2.html
@@ -17,6 +17,17 @@
 	<h1>图片对齐</h1>
 	<hr>
 	<img src="imges/demo1.jpg" alt="">
+	<h1>避免浮动锁线</h1>
+	<hr>
+	<div class="clearfix">
+		<img  class="floatimg" src="imges/pineapple.jpg" alt="">
+		给父元素增加一个类，设置overflow：hidden，可以避免子元素浮动后，父元素缩成一条线。
+	</div>
+	<hr>
+	<div class="footer">
+		<p>我是footer</p>
+	</div>
+
 
 	
 </body>
